Fix z-index

--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -7,6 +7,8 @@
     display: flex;
     align-items: flex-end;
     justify-content: center;
+    position: relative;
+    z-index: 10;
 
 
     &__data {
